--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,16 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.vladzur.mysyncnotes.NewNoteActivity"
+            android:label="@string/title_activity_new_note"></activity>
+        <activity
+            android:name="com.vladzur.mysyncnotes.ViewNoteActivity"
+            android:label="@string/title_activity_view_note"></activity>
     </application>
+
 </manifest>
